--- a/code/36_Mixing-Html-And-Webgl/src/style.css
+++ b/code/36_Mixing-Html-And-Webgl/src/style.css
@@ -36,3 +36,61 @@ body
     transform-origin: 100% 0;
     transition: transform 1.5s ease-in-out;
 }
+
+.point
+{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
+.point .label
+{
+    cursor: help;
+    position: absolute;
+    top: -20px;
+    left: -20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #00000077;
+    border: 1px solid #ffffff77;
+    color: #ffffff;
+    font-family: Helvetica, Arial, sans-serif;
+    text-align: center;
+    line-height: 40px;
+    font-weight: 100;
+    font-size: 14px;
+    transform: scale(0, 0);
+    transition: transform 0.3s;
+}
+
+.point.visible .label
+{
+    transform: scale(1, 1);
+}
+
+.point:hover .text
+{
+    opacity: 1;
+}
+
+.point .text
+{
+    transition: opacity 0.3s;
+    pointer-events: none;
+    position: absolute;
+    top: 30px;
+    left: -120px;
+    width: 200px;
+    padding: 20px;
+    border-radius: 4px;
+    background: #00000077;
+    border: 1px solid #ffffff77;
+    color: #ffffff;
+    line-height: 1.3em;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 100;
+    font-size: 14px;
+    opacity: 0;
+}
